Hotfix: Fixing simple text down spacing  :fire:

--- a/components/simple-text/simple-text.scss
+++ b/components/simple-text/simple-text.scss
@@ -1,64 +1,78 @@
-.tcs-simple-text{
-    background-color: white;
-    font-family: $lora-reg;
-    font-size: 14px;
-    font-weight: normal;
+.tcs-simple-text {
+  background-color: white;
+  font-family: $lora-reg;
+  font-size: 14px;
+  font-weight: normal;
 
-    h3{
-        color: $blue-2;
-    }
+  h3 {
+    color: $blue-2;
+  }
 }
 
-.tcs-callout{
-    width: 40%;
-    left: -15px;
-    top: 25px;
+.tcs-callout {
+  width: 40%;
+  left: -15px;
+  top: 25px;
+  opacity: 0.15;
+}
+
+.tcs-callout__down {
+  width: 40%;
+  left: -15px;
+  top: 25px;
+  opacity: 0.15;
+}
+
+.image-div {
+  display: flex;
+  // height: 354px;
+}
+
+.baffle-image-text {
+  flex: 0 0 50%;
+  max-width: 50%;
+}
+
+.baffle-image {
+  opacity: 0.7;
+}
+
+.baffle-paragraph {
+  float: left;
+}
+
+.baffle-down-text {
+  font-family: $lora-reg;
+  color: $blue;
+  text-align: center;
+}
+
+.d-baffle-image {
+  width: 234px;
+}
+
+@include media-breakpoint-up(lg) {
+  .tcs-simple-text {
+    font-size: 18px;
+  }
+  .tcs-callout__down {
+    width: 190px;
+    left: 25px;
+    top: 40px;
     opacity: 0.15;
-}
-
-.image-div{
-    display: flex;
-    // height: 354px;
-}
-
-.baffle-image-text{
-    flex: 0 0 50%;
-    max-width: 50%;
-}
-
-.baffle-image{
-    opacity: .7;
-}
-
-.baffle-paragraph{
-    float: left;
-}
-
-.baffle-down-text{
-    font-family: $lora-reg;
-    color: $blue;
-    text-align: center;
-}
-
-.d-baffle-image{
-    width: 234px;
+  }
+  .tcs-callout-title__down {
+    line-height: 52px;
+  }
 }
 
 @include media-breakpoint-up(lg) {
-    .tcs-simple-text{
-        font-size: 18px;
-    }
+  .baffle-paragraph {
+    margin-top: 80px;
+  }
 }
 
-@include media-breakpoint-up(lg) {
-    .baffle-paragraph{
-        margin-top: 80px;
-    }
-   
-}
-
-
-.tcs-bafflebox__image-float{
-    margin-top: -40px;
-    margin-bottom: -40px;
+.tcs-bafflebox__image-float {
+  margin-top: -40px;
+  margin-bottom: -40px;
 }
